First gender-specific modeling

--- a/code/modeling_i.ipynb
+++ b/code/modeling_i.ipynb
@@ -2669,7 +2669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#y_pred_clipped = np.clip(y_pred, a_min=0, a_max=None)"
+    "#y_pred_clipped = np.clip(y_pred, a_min=0, a_max=None) #Should likely be using this code I found among somebody on Kaggle instead of that loop..."
    ]
   },
   {
