--- a/code/modeling_ii.ipynb
+++ b/code/modeling_ii.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d4306617",
    "metadata": {},
    "outputs": [
@@ -485,10 +485,463 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9c2985",
+   "id": "7f40b05c",
    "metadata": {},
    "source": [
     "Better all around, but once again I'm just quite confused at the discrepencies. Likely this is where domain knowledge would be key..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec524811",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "36de8b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_model_m = model_defaults_m\n",
+    "submission_model_f = model_defaults_f\n",
+    "submission_model_i = model_defaults_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "151c7cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60411, 10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>whole_weight1</th>\n",
+       "      <th>whole_weight2</th>\n",
+       "      <th>shell_weight</th>\n",
+       "      <th>sex_I</th>\n",
+       "      <th>sex_M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90615</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>1.2380</td>\n",
+       "      <td>0.6185</td>\n",
+       "      <td>0.3125</td>\n",
+       "      <td>0.3005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90616</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>0.460</td>\n",
+       "      <td>0.160</td>\n",
+       "      <td>0.9830</td>\n",
+       "      <td>0.4785</td>\n",
+       "      <td>0.2195</td>\n",
+       "      <td>0.2750</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90617</td>\n",
+       "      <td>0.560</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.140</td>\n",
+       "      <td>0.8395</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>0.1845</td>\n",
+       "      <td>0.2405</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90618</td>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>0.8740</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>0.1865</td>\n",
+       "      <td>0.2350</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90619</td>\n",
+       "      <td>0.415</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>0.3580</td>\n",
+       "      <td>0.1575</td>\n",
+       "      <td>0.0670</td>\n",
+       "      <td>0.1050</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  length  diameter  height  whole_weight  whole_weight1  \\\n",
+       "0  90615   0.645     0.475   0.155        1.2380         0.6185   \n",
+       "1  90616   0.580     0.460   0.160        0.9830         0.4785   \n",
+       "2  90617   0.560     0.420   0.140        0.8395         0.3525   \n",
+       "3  90618   0.570     0.490   0.145        0.8740         0.3525   \n",
+       "4  90619   0.415     0.325   0.110        0.3580         0.1575   \n",
+       "\n",
+       "   whole_weight2  shell_weight  sex_I  sex_M  \n",
+       "0         0.3125        0.3005      0      1  \n",
+       "1         0.2195        0.2750      0      1  \n",
+       "2         0.1845        0.2405      0      1  \n",
+       "3         0.1865        0.2350      0      1  \n",
+       "4         0.0670        0.1050      1      0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val = pd.read_csv('../data/cleaned_test.csv')\n",
+    "df_val = pd.get_dummies(df_val, columns=['sex'], dtype=int, drop_first=True)\n",
+    "print(df_val.shape)\n",
+    "df_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0eaef4f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\core\\internals\\blocks.py:329: RuntimeWarning: divide by zero encountered in log\n",
+      "  result = func(self.values, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>whole_weight1</th>\n",
+       "      <th>whole_weight2</th>\n",
+       "      <th>shell_weight</th>\n",
+       "      <th>sex_I</th>\n",
+       "      <th>sex_M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90615</td>\n",
+       "      <td>-0.438505</td>\n",
+       "      <td>-0.744440</td>\n",
+       "      <td>-1.864330</td>\n",
+       "      <td>0.213497</td>\n",
+       "      <td>-0.480458</td>\n",
+       "      <td>-1.163151</td>\n",
+       "      <td>-1.202308</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90616</td>\n",
+       "      <td>-0.544727</td>\n",
+       "      <td>-0.776529</td>\n",
+       "      <td>-1.832581</td>\n",
+       "      <td>-0.017146</td>\n",
+       "      <td>-0.737099</td>\n",
+       "      <td>-1.516403</td>\n",
+       "      <td>-1.290984</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90617</td>\n",
+       "      <td>-0.579818</td>\n",
+       "      <td>-0.867501</td>\n",
+       "      <td>-1.966113</td>\n",
+       "      <td>-0.174949</td>\n",
+       "      <td>-1.042705</td>\n",
+       "      <td>-1.690106</td>\n",
+       "      <td>-1.425035</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90618</td>\n",
+       "      <td>-0.562119</td>\n",
+       "      <td>-0.713350</td>\n",
+       "      <td>-1.931022</td>\n",
+       "      <td>-0.134675</td>\n",
+       "      <td>-1.042705</td>\n",
+       "      <td>-1.679324</td>\n",
+       "      <td>-1.448170</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90619</td>\n",
+       "      <td>-0.879477</td>\n",
+       "      <td>-1.123930</td>\n",
+       "      <td>-2.207275</td>\n",
+       "      <td>-1.027222</td>\n",
+       "      <td>-1.848330</td>\n",
+       "      <td>-2.703063</td>\n",
+       "      <td>-2.253795</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id    length  diameter    height  whole_weight  whole_weight1  \\\n",
+       "0  90615 -0.438505 -0.744440 -1.864330      0.213497      -0.480458   \n",
+       "1  90616 -0.544727 -0.776529 -1.832581     -0.017146      -0.737099   \n",
+       "2  90617 -0.579818 -0.867501 -1.966113     -0.174949      -1.042705   \n",
+       "3  90618 -0.562119 -0.713350 -1.931022     -0.134675      -1.042705   \n",
+       "4  90619 -0.879477 -1.123930 -2.207275     -1.027222      -1.848330   \n",
+       "\n",
+       "   whole_weight2  shell_weight  sex_I  sex_M  \n",
+       "0      -1.163151     -1.202308      0      1  \n",
+       "1      -1.516403     -1.290984      0      1  \n",
+       "2      -1.690106     -1.425035      0      1  \n",
+       "3      -1.679324     -1.448170      0      1  \n",
+       "4      -2.703063     -2.253795      1      0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_log_val = np.log(df_val)\n",
+    "\n",
+    "df_log_val['sex_I'] = df_val['sex_I']\n",
+    "df_log_val['sex_M'] = df_val['sex_M']\n",
+    "df_log_val['id'] = df_val['id']\n",
+    "\n",
+    "df_log_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fd2a36ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_log_val_m = df_log_val[df_log_val['sex_M']==1] #We'll start with males and if this does super well then we'll bother for the rest.\n",
+    "df_log_val_i = df_log_val[df_log_val['sex_I']==1]\n",
+    "df_log_val_f = df_log_val[(df_log_val['sex_M']==0) & (df_log_val['sex_I']==0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9e5b9297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_m = df_log_val_m.drop(['id', 'sex_I', 'sex_M'], axis=1)\n",
+    "\n",
+    "X_val_m = mms.transform(X_m)\n",
+    "\n",
+    "X_f = df_log_val_f.drop(['id', 'sex_I', 'sex_M'], axis=1)\n",
+    "\n",
+    "X_val_f = mms.transform(X_f)\n",
+    "\n",
+    "X_i = df_log_val_i.drop(['id', 'sex_I', 'sex_M'], axis=1)\n",
+    "\n",
+    "X_val_i = mms.transform(X_i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "74c252ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_m = pd.DataFrame(df_log_val_m['id'])\n",
+    "sub_m['Rings'] = np.exp(submission_model_m.predict(X_val_m))\n",
+    "\n",
+    "sub_f = pd.DataFrame(df_log_val_f['id'])\n",
+    "sub_f['Rings'] = np.exp(submission_model_f.predict(X_val_f))\n",
+    "\n",
+    "sub_i = pd.DataFrame(df_log_val_i['id'])\n",
+    "sub_i['Rings'] = np.exp(submission_model_i.predict(X_val_i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "00e3de7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Rings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90615</td>\n",
+       "      <td>10.544132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90616</td>\n",
+       "      <td>11.122157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90617</td>\n",
+       "      <td>9.373357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90618</td>\n",
+       "      <td>9.838700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90619</td>\n",
+       "      <td>7.550844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id      Rings\n",
+       "0  90615  10.544132\n",
+       "1  90616  11.122157\n",
+       "2  90617   9.373357\n",
+       "3  90618   9.838700\n",
+       "4  90619   7.550844"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission = pd.concat([sub_m, sub_f, sub_i]).sort_values('id')\n",
+    "# submission['Rings'] = submission['Rings'].round(0)\n",
+    "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e07cc7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.to_csv(\n",
+    "    '../data/submission_iii.csv', index=False)"
    ]
   }
  ],
