Start of final anticipated attempt - breaking apart by weight and only then modeling

--- a/code/modeling_i.ipynb
+++ b/code/modeling_i.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "abb34d4c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6652f1e3",
    "metadata": {},
    "outputs": [],
@@ -76,20 +76,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
+   "id": "bea582ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Actual custom rmsle....\n",
+    "\n",
+    "#Ideally, I'd rather not have to actually write the formula out... \n",
+    "#Unfortunately this didn't work.Unsure what I did wrong,but eh...\n",
+    "\n",
+    "def cus_rmsle(actuals, preds):\n",
+    "    rmsle = 0\n",
+    "    for i in range(len(actuals)):\n",
+    "        rmsle += np.log(1+min(preds[i], 0)) - np.log(1+actuals[i])\n",
+    "    rmsle = rmsle/len(preds) #Hmm, /+?\n",
+    "    return rmsle**.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "00137fc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Yeah, after thinking about things the scoring should affect patterns detected, so instead of r2 let's finally change things...\n",
     "\n",
-    "# scoring = make_scorer(root_mean_squared_log_error, greater_is_better=False)\n",
-    "scoring = make_scorer(mean_squared_log_error, greater_is_better=False, squared=False)"
+    "scoring = make_scorer(root_mean_squared_log_error, greater_is_better=False)\n",
+    "# scoring = make_scorer(mean_squared_log_error, greater_is_better=False, squared=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4ca94d85",
    "metadata": {},
    "outputs": [
@@ -97,139 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(90609, 9)\n"
+      "(90609, 10)\n"
      ]
     },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sex</th>\n",
-       "      <th>length</th>\n",
-       "      <th>diameter</th>\n",
-       "      <th>height</th>\n",
-       "      <th>whole_weight</th>\n",
-       "      <th>whole_weight1</th>\n",
-       "      <th>whole_weight2</th>\n",
-       "      <th>shell_weight</th>\n",
-       "      <th>rings</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>F</td>\n",
-       "      <td>0.550</td>\n",
-       "      <td>0.430</td>\n",
-       "      <td>0.150</td>\n",
-       "      <td>0.7715</td>\n",
-       "      <td>0.3285</td>\n",
-       "      <td>0.1465</td>\n",
-       "      <td>0.2400</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>F</td>\n",
-       "      <td>0.630</td>\n",
-       "      <td>0.490</td>\n",
-       "      <td>0.145</td>\n",
-       "      <td>1.1300</td>\n",
-       "      <td>0.4580</td>\n",
-       "      <td>0.2765</td>\n",
-       "      <td>0.3200</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.160</td>\n",
-       "      <td>0.110</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>0.0210</td>\n",
-       "      <td>0.0055</td>\n",
-       "      <td>0.0030</td>\n",
-       "      <td>0.0050</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M</td>\n",
-       "      <td>0.595</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>0.150</td>\n",
-       "      <td>0.9145</td>\n",
-       "      <td>0.3755</td>\n",
-       "      <td>0.2055</td>\n",
-       "      <td>0.2500</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.555</td>\n",
-       "      <td>0.425</td>\n",
-       "      <td>0.130</td>\n",
-       "      <td>0.7820</td>\n",
-       "      <td>0.3695</td>\n",
-       "      <td>0.1600</td>\n",
-       "      <td>0.1975</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  sex  length  diameter  height  whole_weight  whole_weight1  whole_weight2  \\\n",
-       "0   F   0.550     0.430   0.150        0.7715         0.3285         0.1465   \n",
-       "1   F   0.630     0.490   0.145        1.1300         0.4580         0.2765   \n",
-       "2   I   0.160     0.110   0.025        0.0210         0.0055         0.0030   \n",
-       "3   M   0.595     0.475   0.150        0.9145         0.3755         0.2055   \n",
-       "4   I   0.555     0.425   0.130        0.7820         0.3695         0.1600   \n",
-       "\n",
-       "   shell_weight  rings  \n",
-       "0        0.2400     11  \n",
-       "1        0.3200     11  \n",
-       "2        0.0050      6  \n",
-       "3        0.2500     10  \n",
-       "4        0.1975      9  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('../data/cleaned_train.csv')\n",
-    "print(df.shape)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "12f8249c",
-   "metadata": {},
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -349,22 +239,25 @@
        "4        0.1975      9      1      0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('../data/cleaned_train.csv')\n",
+    "\n",
+    "df = pd.get_dummies(df, columns=['sex'], dtype=int, drop_first=True)\n",
     "#I honestly forgot to earlier, although I do like the data is preserved: At least at the moment we also need to dummify sex\n",
     "#to get our lovely sklearn methods to work:\n",
     "\n",
-    "df = pd.get_dummies(df, columns=['sex'], dtype=int, drop_first=True)\n",
-    "df.head()  #Note that the baseline, ie 0s in the rest, will be indicativ of female abalones."
+    "print(df.shape)\n",
+    "df.head()#Note that the baseline, ie 0s in the rest, will be indicativ of female abalones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "02b1e59f",
    "metadata": {},
    "outputs": [],
@@ -414,7 +307,11 @@
     "\n",
     "I'm going back and trying to get the custom scorer going... it finally is clear to me that the issue I had then is what I had a while back and what I have no (which in short means): Seemingly those records whose predictions would be lower than 0 cause issues even in the fitting stage... Which makes sense as we're already taking the rmsle in the get-go, using htat to try to determine the model... likely can get around it in the linear regression stage, but to use rfe.... and for forests...\n",
     "\n",
-    "So, it is incumbent upon us to get around this."
+    "So, it is incumbent upon us to get around this.\n",
+    "\n",
+    "### Conclusion re. Temp:\n",
+    "\n",
+    "Ironic the name of hte Stackoverflow user that commented this - StupidWolf: Anyways, to focus on doing log transformations also to the target. So, I went ahead and did that on modeling_ii and it worked... Ie once the target is also log scaled then it's basically not going to happen to ever get a negative prediction... so we got this!"
    ]
   },
   {
@@ -461,7 +358,6 @@
     "\n",
     "lr = LinearRegression()\n",
     "rfe = RFECV(lr, step=1, cv=5\n",
-    "            ,scoring=scoring\n",
     "            ,min_features_to_select=3)\n",
     "\n",
     "model_defaults = rfe.fit(X_train, y_train)\n",
@@ -478,6 +374,14 @@
     "print(model_defaults.cv_results_['mean_test_score'])\n",
     "root_mean_squared_log_error(y_test, preds_model_defaults)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7602a2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1760,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "a2f63960",
    "metadata": {},
    "outputs": [],
@@ -1777,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "a03968d1",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1700,7 @@
        "0.05848349109552299"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,6 +1726,27 @@
     "root_mean_squared_log_error(y_test, preds_model_defaults)\n",
     "\n",
     "#Awww yeah, that's awesome!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f4b9af91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_defaults.ranking_"
    ]
   },
   {
@@ -1854,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "6563d4b7",
    "metadata": {},
    "outputs": [
@@ -1871,7 +1796,7 @@
        "0.05449082576242973"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,14 +1817,6 @@
     "\n",
     "#Nice, a bit better."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e9a1c5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
