Variables for partioned modeling worked out

--- a/code/modeling_ii.ipynb
+++ b/code/modeling_ii.ipynb
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd8a890",
+   "id": "a65fb294",
    "metadata": {},
    "source": [
     "## A Final Idea to Try\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a26ee47f",
+   "id": "6b82ba03",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0df3ddf1",
+   "id": "4628f9f7",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "136dfaf2",
+   "id": "36ad309c",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "971d3154",
+   "id": "b61002d2",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a5b4e0ee",
+   "id": "ac37db63",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bb7e1bab",
+   "id": "8bd60c6a",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7e728470",
+   "id": "2f859965",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6efe531a",
+   "id": "8c303bdc",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "27581aa2",
+   "id": "32534016",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "294da476",
+   "id": "e3d47d15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,26 +1236,159 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd3aa54",
+   "id": "3d359489",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First up will be getting together the dataframes\n",
+    "#First up will be getting together the dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "db6d10f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So, for the record, we'll be dealing with 6 models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#In retrospect shoudl chang the names into tables_df, tables_parts, etc.\n",
     "\n",
-    "X_m = males_log.drop(['rings', 'sex_I', 'sex_M'], axis=1)\n",
-    "y_m = males_log['rings']\n",
+    "borders = [float('-inf'), -4, -3, -2, -1, 0, float('inf')]\n",
+    "modeling_feature_focus = 'whole_weight'\n",
+    "names_df = []\n",
     "\n",
-    "X_train_m, X_test_m, y_train_m, y_test_m = train_test_split(X_m, y_m, test_size=.25, random_state=26)\n",
+    "for i in range(len(borders)-1):\n",
+    "    names_df.append(f\"df_log_part_{i}\") #I think I'll need to do this in two parts\n",
     "\n",
-    "mms = MinMaxScaler()\n",
-    "X_train_m = mms.fit_transform(X_train_m)\n",
-    "X_test_m = mms.transform(X_test_m)"
+    "print(f\"So, for the record, we'll be dealing with {len(names_df)} models.\")\n",
+    "    \n",
+    "for i in range(len(names_df)):\n",
+    "    names_df[i] = df_log[df_log[modeling_feature_focus].between(borders[i],borders[i+1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "deaee0fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parts_df = []\n",
+    "for i in range(len(names_df)):\n",
+    "    parts_df.append([])\n",
+    "\n",
+    "for i in range(len(names_df)):\n",
+    "    parts_df[i].append(f\"X_{i}\")\n",
+    "    parts_df[i].append(f\"y_{i}\")\n",
+    "    parts_df[i].append(f\"X_train_{i}\")\n",
+    "    parts_df[i].append(f\"X_test{i}\")\n",
+    "    parts_df[i].append(f\"y_train{i}\")\n",
+    "    parts_df[i].append(f\"y_test{i}\")\n",
+    "    #Then we'll re-use pthe earlier X_trains: parts_df[i][2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fff614ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(parts_df)):\n",
+    "    parts_df[i][0] = names_df[i].drop('rings', axis=1)\n",
+    "    parts_df[i][1] = names_df[i]['rings']\n",
+    "    \n",
+    "    parts_df[i][2],  parts_df[i][3], parts_df[i][4], parts_df[i][5] = train_test_split(parts_df[i][0], parts_df[i][1],\n",
+    "                                                                                      test_size=.2, random_state=26)\n",
+    "    \n",
+    "    mms = MinMaxScaler()\n",
+    "    parts_df[i][2] = mms.fit_transform(parts_df[i][2])\n",
+    "    parts_df[i][3] = mms.transform(parts_df[i][3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cb34e49d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8188718274792733 -0.08382218999955282\n",
+      "0.0745495936418762 is the rmsle of part 0\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0.856127727657888 -0.03778900437357513\n",
+      "0.08773108842288006 is the rmsle of part 1\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0.87267755749959 0.09484857232620758\n",
+      "0.0804909790762586 is the rmsle of part 2\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0.8844003182368578 0.15465297274482692\n",
+      "0.06873708007002009 is the rmsle of part 3\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0.9275421216784645 0.472640740080136\n",
+      "0.052176412403794545 is the rmsle of part 4\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0.9279486894049043 0.48617560548191985\n",
+      "0.04989946341253668 is the rmsle of part 5\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#I'll jump ahead to Random Forests:\n",
+    "\n",
+    "models_df = []\n",
+    "for i in range(len(names_df)):\n",
+    "    models_df.append([])\n",
+    "for i in range(len(names_df)):\n",
+    "    models_df[i].append(f\"model_part_{i}\")\n",
+    "    models_df[i].append(f\"preds_part_{i}\")\n",
+    "\n",
+    "#Names are prepared,so now let's do it\n",
+    "for i in range(len(models_df)):\n",
+    "    rf = RandomForestRegressor(random_state=26)\n",
+    "    \n",
+    "    models_df[i][0] = rf.fit(parts_df[i][2], parts_df[i][4])\n",
+    "    \n",
+    "    models_df[i][1] = models_df[i][0].predict(parts_df[i][3])\n",
+    "\n",
+    "    #Oh,just realized that when logging I don't need tow ory aobut this... oh well\n",
+    "#     for i in range(len(preds_model_defaults_m)):\n",
+    "#         if preds_model_defaults_m[i] < 0:\n",
+    "#             preds_model_defaults_m[i] = 0\n",
+    "#     print(preds_model_defaults_m[preds_model_defaults_m<0])\n",
+    "\n",
+    "    print(models_df[i][0].score(parts_df[i][2], parts_df[i][4]), models_df[i][0].score(parts_df[i][3], parts_df[i][5]))\n",
+    "    print(f\"{root_mean_squared_log_error(parts_df[i][5], models_df[i][1])} is the rmsle of part {i}\")\n",
+    "    print(f\"~\"*26)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9e4b076",
+   "metadata": {},
+   "source": [
+    "Unsurprising that the R^2 is so poor on the first few as their size is so small that the model had an incredibly hard time predicting them.\n",
+    "\n",
+    "So, effectively we probably totally ostrocized the 'outliers', but perhaps we'll make that up with the rest.\n",
+    "\n",
+    "So, let us continue with a similar procedure to above for the test/validation data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b2916f5",
+   "id": "bb9086a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1263,7 +1396,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a7a48f3",
+   "id": "1f3805b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5063f826",
    "metadata": {},
    "outputs": [],
    "source": []
